--- a/jawaban-no-7.html
+++ b/jawaban-no-7.html
@@ -10,9 +10,9 @@
     <div id="form">
         <form action="#">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" value="Username" style="width: 150px;"><br>
+            <input type="text" id="username" name="username" placeholder="Username" style="width: 150px;"><br>
             <label for="password">Password:</label>
-            <input type="text" id="password" name="password" value="Password"  style="width: 150px;margin-top: 10px;"><br>
+            <input type="text" id="password" name="password" placeholder="Password"  style="width: 150px;margin-top: 10px;"><br>
             <input type="submit" value="login" style="margin-top:10px;">
         </form>
     </div>
